--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,7 +62,7 @@ body {
 	height: 100%;
 	display: inline-block;
 	background-color: var(--Primary-Light);
-	overflow: auto;
+	overflow-y: auto;
 }
 
 .filter.hidden {
@@ -75,7 +75,7 @@ body {
     transition: width, 0.2s linear;
 }
 .filter.visible {
-	width: 400px;
+	width: 425px;
 	padding: 8px;
 	-webkit-transition:width, 0.2s linear;
     -moz-transition: width, 0.2s linear;
@@ -217,7 +217,7 @@ body {
 {
      background-color: #f1f1f1;
 }
-.form-radio-group-label {
+.form-radio-group-label, .book-form-field-container {
 	margin-top: 18px;
 }
 
@@ -294,30 +294,43 @@ body {
 
 .bookView {
 	width: 100%;
-	height: 100%;
+	height: calc(100vh - 80px);
 	z-index: 15;
 	position: absolute;
 	background: var(--Primary-Light);
+
+	display: flex;
+	align-items: stretch;
+	flex-direction: column;
+}
+
+.bookView form {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+.bookView div {
+	padding: 4px;
 }
 
 .bookView.hidden {
 	display: none;
 }
 .bookView.visible {
-	display: visible;
+	display: flex;
 }
 
-.book-form-buttons {
+.book-form-buttons, .book-image-buttons {
 	background-color: var(--Primary-Mid);
 	color: var(--Primary-Light);
 
 	display: flex;
 
-	width: 100%;
-	height: 75px;
+	flex: 0 0 75px;
 }
 
-.book-form-button {
+.book-form-button, .book-image-button {
 	margin: 0.2em 0.2em 0.2em 0.2em;
 	padding: 0.46em 1.6em;
 	flex-grow: 1;
@@ -337,7 +350,55 @@ body {
 	color: var(--Secondary-Dark);
 	background-color: var(--Secondary-Light);
 }
-.book-form-button:hover {
+.book-form-button:hover, .book-image-button:hover {
 	color: var(--Secondary-Light);
 	background-color: var(--Secondary-Dark);
+}
+
+.book-form-main {
+	flex: 1;
+	display: flex;
+}
+.form-field-left {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+.form-field-left-top {
+	flex: 1;
+	display: flex;
+}
+.form-field-left-top-left {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+.form-field-left-top-right {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+.form-field-left-middle {
+	flex: 1;
+	display: flex;
+}
+.form-field-left-bottom {
+	flex: 1;
+	display: flex;
+}
+.form-field-right {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+.book-form-field-container {
+	flex: 1;
+}
+.form-field-row {
+	flex: 1;
+	display: flex;
+}
+textarea {
+	width: 100%;
+	height: 100%;
 }
