--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -33,19 +33,36 @@ html,body {
 }
 
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: georgia, serif;
 	font-size: 16px;
 	height: 100%;
 	overflow: hidden;
+}
+
+button, input, textarea {
+	font-family: georgia, serif;
+}
+
+canvas {
+	display: inline-block;
 }
 
 .gridObject {
 	margin: 2px;
 }
 
-.gridObject img {
+.gridObject img, .bookImage {
 	width: 150px;
 	height: 225px;
+}
+
+.bookImage {
+  border: 1px solid black;
+  display: table-cell;
+  vertical-align: middle;
+  font: 20px georgia, sans-serif;
+  text-align: center;
+  word-break: break-word;
 }
 
 .grid {
@@ -216,7 +233,7 @@ body {
 .form-radio:checked::before
 {
      position: absolute;
-     font: 13px/1 'Roboto', sans-serif;
+     font-size: 13px;
      left: 11px;
      top: 7px;
      content: '\02143';
@@ -246,6 +263,25 @@ body {
 	will-change: overflow;
 }
 
+.bookcases-container {
+	display: flex;
+	overflow: hidden;
+	height: 100vh;
+	margin-top: -80px;
+	padding-top: 80px;
+	position: relative;
+	width: 100%;
+	backface-visibility: hidden;
+	will-change: overflow;
+}
+
+.bookcases {
+	overflow: auto;
+	height: auto;
+	margin-bottom: 80px;
+	white-space: nowrap;
+}
+
 .grid, .filter {
 	overflow: auto;
 	height: auto;
@@ -273,7 +309,7 @@ body {
 }
 
 .header-button {
-	margin: 0.2em 0.2em 0.2em 0.2em;
+	margin: .5em 1em;
 	padding: 0.46em 1.6em;
 	flex-grow: 1;
 
@@ -311,6 +347,7 @@ body {
 	z-index: 15;
 	position: absolute;
 	background: var(--Primary-Light);
+	overflow: auto;
 
 	display: flex;
 	align-items: stretch;
@@ -334,6 +371,13 @@ body {
 	display: flex;
 }
 
+.hidden {
+	display: none;
+}
+.visible {
+	display: inline-block;
+}
+
 .book-form-buttons, .book-image-buttons {
 	background-color: var(--Primary-Mid);
 	color: var(--Primary-Light);
@@ -344,7 +388,7 @@ body {
 }
 
 .book-form-button, .book-image-button {
-	margin: 0.2em 0.2em 0.2em 0.2em;
+	margin: 0.5em 1em;
 	padding: 0.46em 1.6em;
 	flex-grow: 1;
 
@@ -373,7 +417,7 @@ body {
 	display: flex;
 }
 .form-field-left {
-	flex: 1;
+	flex: 2;
 	display: flex;
 	flex-direction: column;
 }
@@ -382,7 +426,7 @@ body {
 	display: flex;
 }
 .form-field-left-top-left {
-	flex: 1;
+	flex: 4;
 	display: flex;
 	flex-direction: column;
 }
@@ -396,7 +440,7 @@ body {
 	display: flex;
 }
 .form-field-left-bottom {
-	flex: 1;
+	flex: 4;
 	display: flex;
 }
 .form-field-right {
@@ -407,6 +451,9 @@ body {
 .book-form-field-container {
 	flex: 1;
 }
+.book-form-field-container-long {
+	flex: 4;
+}
 .form-field-row {
 	flex: 1;
 	display: flex;
@@ -414,4 +461,41 @@ body {
 textarea {
 	width: 100%;
 	height: 100%;
+	font-size: 14px;
+}
+.book-form-image-container img {
+	height: 225px;
+}
+
+input {
+}
+
+@media screen and (min-width: 767px) and (orientation: portrait) {
+	.filter-showhide {
+		width: 60px;
+	}
+	.book-form-main {
+		flex-direction: column;
+	}
+	.form-field-left {
+		flex: 1;
+	}
+	.form-field-right {
+		flex: 2;
+	}
+	.form-field-label {
+		font-size: 16px;
+	}
+	.book-form-main input {
+		font-size: 24px;
+	}
+	.book-form-radio-label {
+		font-size: 24px;
+	}
+	.bookView button {
+		font-size: 24px;
+	}
+	textarea {
+		font-size: 24px;
+	}
 }
