--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -499,3 +499,72 @@ input {
 		font-size: 24px;
 	}
 }
+
+.NavBar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.NavBar button {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.NavBar .active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.NavBar .dropdown .dropbtn {
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.NavBar .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.NavBar .dropdown-content button {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  width: 100%;
+}
+
+.NavBar button:hover, .NavBar .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+.NavBar .dropdown-content button:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.NavBar .dropdown:hover .dropdown-content {
+  display: block;
+}
