--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -502,22 +502,18 @@ input {
 
 .NavBar {
   overflow: hidden;
-  background-color: #333;
+  background-color: var(--Secondary-Light);
 }
 
-.NavBar button {
+.NavBar a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: var(--Secondary-Dark);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-}
-
-.NavBar .active {
-  background-color: #4CAF50;
-  color: white;
+  border: none;
 }
 
 .dropdown {
@@ -529,7 +525,7 @@ input {
   font-size: 17px;    
   border: none;
   outline: none;
-  color: white;
+  color: var(--Secondary-Dark);
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
@@ -539,32 +535,37 @@ input {
 .NavBar .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: var(--Secondary-Light);
+  color: var(--Secondary-Dark);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-.NavBar .dropdown-content button {
+.NavBar .dropdown-content a {
   float: none;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
-  width: 100%;
 }
 
-.NavBar button:hover, .NavBar .dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
+.NavBar a:hover, .NavBar .dropdown:hover .dropbtn {
+  background-color: var(--Secondary-Dark);
+  color: var(--Secondary-Light);
 }
 
-.NavBar .dropdown-content button:hover {
-  background-color: #ddd;
-  color: black;
+.NavBar .dropdown-content a:hover {
+  background-color: var(--Secondary-Dark);
+  color: var(--Secondary-Light);
 }
 
 .NavBar .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.NavBar .active {
+  background-color: var(--Secondary-Dark) !important;
+  color: var(--Secondary-Light) !important;
 }
