Click on a shelf to zoom in

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -280,6 +280,11 @@ canvas {
 	will-change: overflow;
 }
 
+.bookcases-full-shelf {
+	width: 100%;
+	height: 100%;
+}
+
 .bookcases {
 	overflow: auto;
 	height: auto;
