--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -128,11 +128,18 @@ canvas {
 }
 
 .filter-showhide[disabled] {
-	color: var(--Secondary-Dark);
+	color: var(--Primary-Light);
 	background-color: var(--Secondary-Light);
+	text-shadow: none;
 }
 
-.filter-showhide:hover, .filter-nextprevious:hover {
+.filter-showhide[disabled]:hover {
+	color: var(--Primary-Light);
+	background-color: var(--Secondary-Light);
+	text-shadow: none;
+}
+
+.filter-showhide:hover {
 	color: var(--Secondary-Light);
 	background-color: var(--Secondary-Dark);
 }
@@ -270,6 +277,7 @@ canvas {
 
 .bookcases-container {
 	display: flex;
+	flex-direction: column;
 	overflow: hidden;
 	height: 100vh;
 	margin-top: -80px;
@@ -290,6 +298,85 @@ canvas {
 	height: auto;
 	margin-bottom: 80px;
 	white-space: nowrap;
+}
+
+.bookcases-bar {
+	position: relative;
+	display: block;
+	background-color: var(--Primary-Light);
+	width: 100%;
+	height: 100%;
+	border: 1px solid var(--Primary-Dark);
+	border-radius: 5px;
+	box-shadow: 0 4px 8px 0 var(--Primary-Dark), 0 6px 20px 0 var(--Primary-Dark);
+	padding: 12px;
+	transition: visibility 0s, opacity 0.3s linear;
+}
+
+.bookcases-bar-container {
+	width: 450px;
+	height: 75px;
+	position: absolute;
+	background: none;
+	left: 24px;
+	top: 104px;
+}
+
+.cases-search-form-field-container {
+	flex: 6;
+}
+
+.cases-search-form-button-container {
+	flex: 2;
+	padding: 4px;
+}
+
+.cases-search-form-button-container button {
+	flex: 2;
+	width: 100%;
+	height: 100%;
+
+	font-size: 12px;
+}
+
+.cases-zoom-button-container {
+	flex: 1;
+	padding: 4px;
+}
+
+.cases-zoom-button-container button {
+	flex: 1;
+	width: 100%;
+	height: 100%;
+
+	font-size: 12px;
+}
+
+.bookcase {
+	width: auto;
+}
+
+.bookcase-hidden {
+	width: 0px;
+	height: 0px;
+}
+
+#bookcase-arrows {
+	position: relative;
+}
+.highlight-arrow {
+	position: absolute;
+}
+
+.bookshelves-return {
+	height: 36px;
+	font-size: xx-large;
+	text-align: center;
+	border: 2px solid black;
+}
+
+.bookshelves-return:hover {
+	cursor: pointer;
 }
 
 .grid, .filters {
@@ -419,6 +506,18 @@ canvas {
 .book-form-button:hover, .book-image-button:hover {
 	color: var(--Secondary-Light);
 	background-color: var(--Secondary-Dark);
+}
+
+.book-form-button[disabled] {
+	color: var(--Primary-Light);
+	background-color: var(--Secondary-Light);
+	text-shadow: none;
+}
+
+.book-form-button[disabled]:hover {
+	color: var(--Primary-Light);
+	background-color: var(--Secondary-Light);
+	text-shadow: none;
 }
 
 .book-form-main {
@@ -602,8 +701,24 @@ input {
 	text-align: center;
 }
 
+.stats {
+	display: flex;
+	height: calc(100vh - 80px);
+	flex-direction: column;
+}
+
 label.form-field-error {
     float: right;
     font-size: xx-small;
     color: #D8000C;
+}
+
+.totalLabel {
+	height: 40px;
+}
+.chart-no-total {
+	height: calc(100vh - 80px - 100px);
+}
+.chart-with-total {
+	height: calc(100vh - 80px - 40px - 100px);
 }
