--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -314,8 +314,8 @@ canvas {
 }
 
 .bookcases-bar-container {
-	width: 450px;
-	height: 75px;
+	width: 500px;
+	height: 50px;
 	position: absolute;
 	background: none;
 	left: 24px;
@@ -350,6 +350,48 @@ canvas {
 	height: 100%;
 
 	font-size: 12px;
+}
+
+.cases-edit-button-container {
+	flex: 2;
+	padding: 4px;
+}
+
+.cases-edit-button-container button {
+	flex: 1;
+	width: 100%;
+	height: 100%;
+
+	font-size: 12px;
+}
+
+.shelfEditor {
+	width: 100%;
+	height: calc(100vh - 80px);
+	z-index: 15;
+	position: absolute;
+	background: var(--Primary-Light);
+}
+
+.shelfEditorMain {
+	display: flex;
+	height: calc(100% - 75px);
+}
+
+.caseTreeContainer {
+	flex: 1;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+.caseEditorContainer {
+	flex: 3;
+
+}
+
+.shelfEditorButtons {
+	display: flex;
+	height: 75px;
 }
 
 .bookcase {
