--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -27,6 +27,10 @@
 	--Tertiary-Dark: #003C1C;
 }
 
+html {
+	height: 100%;
+}
+
 html,body {
 	padding: 0;
 	margin: 0;
@@ -47,8 +51,58 @@ canvas {
 	display: inline-block;
 }
 
+.priorityObject {
+	display: flex;
+	line-height: 60px;
+	border-bottom: 1px solid gray;
+}
+
+.priorityNumber {
+	padding-left: 15px;
+	width: 50px;
+}
+
+.priorityImage {
+	height: 60px;
+	width: 40px;
+}
+
+.priorityImage div {
+	height: 100%;
+	width: 100%;
+}
+
+.priorityImageContainer {
+	height: 60px;
+	width: 40px;
+}
+
+.priorityImageContainer img {
+	height: 60px;
+	width: 40px;
+}
+
+.priorityTitle {
+	flex-grow: 1;
+	padding-left: 20px;
+}
+
+.priority {
+	height: calc(100vh - 80px);
+}
+
+.priorityList {
+	height: 100%;
+	overflow: auto;
+}
+
 .gridObject {
 	margin: 2px;
+}
+
+.gridObject.selected {
+	outline: 10px solid red;
+	outline-offset: -10px;
 }
 
 .gridObject img, .bookImage {
@@ -151,9 +205,19 @@ canvas {
     left: 50%;
 }
 
+.filter-remove {
+	font-size: 16px;
+	white-space: nowrap;
+}
+
 .filters {
 	height: 100%;
 	display: flex;
+}
+
+.filter-container-bottom-bar {
+	border-bottom: 1px solid var(--Primary-Mid);
+	padding-bottom: 24px;
 }
 
 .form-button {
@@ -309,13 +373,12 @@ canvas {
 	border: 1px solid var(--Primary-Dark);
 	border-radius: 5px;
 	box-shadow: 0 4px 8px 0 var(--Primary-Dark), 0 6px 20px 0 var(--Primary-Dark);
-	padding: 12px;
+	padding: 12px 12px 12px;
 	transition: visibility 0s, opacity 0.3s linear;
 }
 
 .bookcases-bar-container {
 	width: 500px;
-	height: 50px;
 	position: absolute;
 	background: none;
 	left: 24px;
@@ -346,8 +409,8 @@ canvas {
 
 .cases-zoom-button-container button {
 	flex: 1;
-	width: 100%;
-	height: 100%;
+	width: 48px;
+	height: 48px;
 
 	font-size: 12px;
 }
@@ -408,6 +471,12 @@ canvas {
 }
 .highlight-arrow {
 	position: absolute;
+}
+.highlight-arrow img {
+	filter: brightness(0) saturate(100%) invert(14%) sepia(85%) saturate(7315%) hue-rotate(356deg) brightness(88%) contrast(131%);
+}
+.highlighted img {
+	filter: brightness(0) saturate(100%) invert(95%) sepia(39%) saturate(3067%) hue-rotate(358deg) brightness(109%) contrast(109%);
 }
 
 .bookshelves-return {
